Remove default event during keypair generation and fix sidebar overlapping during screen size change,

--- a/app/assets/stylesheets/simple_sidebar.css
+++ b/app/assets/stylesheets/simple_sidebar.css
@@ -30,6 +30,7 @@
     height: 90%;
     margin-left: -250px;
     overflow-y: auto;
+    background-color: white;
     box-shadow: 0 1px 2px rgba(0,0,0,0.3);
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -99,7 +100,7 @@
     color: #444444;
     background: none;
 }
-
+/*
 @media(min-width:768px) {
     #wrapper {
         padding-left: 250px;
@@ -126,4 +127,4 @@
         position: relative;
         margin-right: 0;
     }
-}
+}*/
